getting closer to the dream

--- a/templates/postlist.html
+++ b/templates/postlist.html
@@ -5,8 +5,10 @@
 <h1>My Blog Posts</h1>
 
     <div>
+        
         <h2>{{indiv_post.title}}</h2>
-        <p>{{indiv_post.post}}</p>
+        <p>{{blog.post}}</p>
+        
     </div>
     
 
