--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
                 font: 16px san-serif;
                 border-radius: 10px;
             };
-            textarea {
+            .textarea {
                 margin: 10px 0;
                 width: 540px;
                 height: 120px;
