--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <h1>Author Page</h1>
     <div>
         <ul>
-            {% for user in list_all_users %}
+            {% for user in users %}
             <li><a href="/blog?owner_id={{user.id}}">{{user.username}}</a></li>
             {% endfor %}
         </ul>
