posts weren't showing. got them to show

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,14 +26,8 @@
 
     <header>
         <nav>
-            <ul>
-                <li><a href='/'>Home</a></li>
-                <li><a href="/blog">Your Blog Posts</a></li>
-                <li><a href="/newpost">New Entry</a></li>
-                <li><a href='/login'>login</a></li>
-                <li><a href='/signup'>Create Account</a></li>
-                <li><a href='/logout'>log out</a></li>
-            </ul>
+            <a href='/blog'>Main Blog</a>
+            <a href='/newpost'>Add an Entry</a>
         </nav>
     </header>
 
